- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 12.0.0
 
- 
        
 - 
        e90116795 (master), e9f4b319a (master), 1d7f6451b (13.0)
 
hello, I'm going to attach a qt test project, freshly created by qt creator.
for both the application output and for test results some of the locations printed are not recognized as locations and therefore are not clickable in application output view, and wrongly reported in test results view
I think qt creator would be more user friendly if all of those locations would be recognised and be made clickable
| For Gerrit Dashboard: QTCREATORBUG-30143 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 528813,2 | Utils: Tweak FilePath device handling | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 528827,3 | AutoTest: Fix location parsing for Qt Test | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 529464,5 | AutoTest: Parse for file paths in Qt test output | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |