Utils: Tweak FilePath device handling

This allows using file scheme in certain contexts.
E.g. starting Qt Creator with

 qtcreator file:///tmp/dummy.txt:10

did not work before while just using the scheme-less
absolute path did.

Task-number: QTCREATORBUG-30143
Change-Id: I8f2b728e733792eb92295bff60b27aecb4b3b8ed
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>